# hydraulic_erosion

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_linux.sh  build_win32.bat
res/shaders/: imgui.fs.glsl  imgui.vs.glsl  terrain.fs.glsl  terrain.vs.glsl  terrain_wireframe.fs.glsl
src/: app.c  app.h  erosion.c  erosion.h  main.c
src/components/: camera.c  camera.h  mesh.c  terrain.c  terrain.h
src/debug/: assert.h
src/events/: event.c  event.h  key_event.c  key_event.h  mouse_event.h  window_event.c  window_event.h
src/gfx/: buffer.c  buffer.h  context.c  context.h  image.c  image.h  mesh.c  mesh.h  pipeline.c  pipeline.h  renderer.c  renderer.h  window.c  window.h
src/imgui/: imgui_context.c  imgui_context.h
src/io/: file.c  file.h
src/math/: noise.c  noise.h  types.h
